# syt

./: .gitignore  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  README.md  syt.cabal
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: package.cache  syt-0.1.0.0-inplace.conf
examples/: Examples.hs
src/: MyLib.hs
src/Data/Constraint/: Dict.hs
src/Data/Typeclass/: Applicative.hs  Bounded.hs  Dict.hs  Enum.hs  Eq.hs  Floating.hs  Foldable.hs  Fractional.hs  Functor.hs  Integral.hs  Monad.hs  Monoid.hs  Num.hs  Ord.hs  Read.hs  Real.hs  RealFloat.hs  RealFrac.hs  Semigroup.hs  Show.hs  Traversable.hs
test/: Main.hs
