cabal-version:      2.4
name:               syt
version:            0.1.0.0
synopsis:           Type families for type class constraints
description:        Provides type families for converting constraints to dictionary types
license:            BSD-3-Clause
author:             ashokkimmel
maintainer:         ashokkimmel@github.com
category:           Data
build-type:         Simple

library
    exposed-modules:  Data.Constraint.Dict
    build-depends:    base >=4.14 && <5
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    default-extensions:
        TypeFamilies
        StandaloneKindSignatures
        DataKinds
        ConstraintKinds
        RankNTypes

test-suite syt-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base >=4.14 && <5
                    , syt
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    default-extensions:
        TypeFamilies
        ScopedTypeVariables
        TypeApplications
