cabal-version:      2.4
name:               syt
version:            0.1.0.0
synopsis:           Scrape Your Typeclasses - Datatype representations of Haskell typeclasses
description:        
    This library provides datatype representations of standard Haskell typeclasses
    from base. Instead of using typeclasses directly, you can pass around
    dictionaries containing the typeclass methods as data.
license:            BSD-3-Clause
author:             Ashok Kimmel
maintainer:         ashok@example.com
category:           Data
build-type:         Simple

library
    exposed-modules:  Data.Typeclass.Eq
                    , Data.Typeclass.Ord
                    , Data.Typeclass.Num
                    , Data.Typeclass.Monoid
                    , Data.Typeclass.Monad
                    , Data.Typeclass.Functor
                    , Data.Typeclass.Applicative
                    , Data.Typeclass.Show
                    , Data.Typeclass.Read
                    , Data.Typeclass.Enum
                    , Data.Typeclass.Bounded
                    , Data.Typeclass.Semigroup
                    , Data.Typeclass.Foldable
                    , Data.Typeclass.Traversable
                    , Data.Typeclass.Real
                    , Data.Typeclass.Integral
                    , Data.Typeclass.Fractional
                    , Data.Typeclass.Floating
                    , Data.Typeclass.RealFrac
                    , Data.Typeclass.RealFloat
                    , Data.Typeclass.Dict
    build-depends:    base >=4.14 && <5
    hs-source-dirs:   src
    default-language: Haskell2010

executable syt-examples
    main-is:          Examples.hs
    build-depends:    base >=4.14 && <5
                    , syt
    hs-source-dirs:   examples
    default-language: Haskell2010
